# rag-eval-toolkit

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: getting_started.md
examples/: basic_evaluation.py  custom_metrics.py
src/rag_eval/: __init__.py  cli.py  evaluator.py
src/rag_eval/backends/: __init__.py  anthropic_backend.py  base.py  openai_backend.py
src/rag_eval/metrics/: __init__.py  base.py  context_precision.py  context_recall.py  faithfulness.py  relevancy.py
src/rag_eval/report/: __init__.py  generator.py
src/rag_eval/report/templates/: report.html
src/rag_eval/utils/: __init__.py  helpers.py
tests/: test_evaluator.py  test_faithfulness.py  test_relevancy.py
