[build-system]
    requires = ["setuptools>=65", "wheel"]
    build-backend = "setuptools.backends.legacy:build"
    
    [project]
    name = "rag-eval-toolkit"
    version = "0.1.0"
    description = "Open-source toolkit for evaluating RAG (Retrieval-Augmented Generation) pipelines."
    readme = "README.md"
    license = {text = "MIT"}
    requires-python = ">=3.8"
    dependencies = [
        "openai>=1.0.0",
        "anthropic>=0.3.0",
        "click>=8.0.0",
        "pydantic>=2.0.0",
    ]
    
    [project.scripts]
    rag-eval = "rag_eval.cli:main"
    
